Update some aliases