@@ -4,11 +4,15 @@
 
 # env. variables ------------------------------------------------------------
 
+export TOMCAT_HOME=/usr/local/opt/tomcat6
+
 # aliases -------------------------------------------------------------------
 
 alias cdl="cd ~/Code/lineup"
-alias tomcat-start="JAVA_OPTS='-Xmx1024m' startup.sh"
-alias tomcat-restart="tomcat-stop && tomcat-start"
+alias tomcat-reset-logs="rm -rf \"${TOMCAT_HOME}\"/libexec/logs/*"
+alias tomcat-clean="rm -rf \"${TOMCAT_HOME}\"/libexec/webapps/ROOT"
+alias tomcat-start="JAVA_OPTS='-Xmx2048m -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled -XX:MaxPermSize=128M' startup.sh"
+alias tomcat-restart="tomcat-stop && tomcat-reset-logs && tomcat-clean && tomcat-start"
 
 # functions -----------------------------------------------------------------
 
